version/0.25/_sources/api/solver/_autosummary/settings/participates_in_solar_ray_tracing.rst.txt
:orphan:

.. _participates_in_solar_ray_tracing:

participates_in_solar_ray_tracing
=================================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.participates_in_solar_ray_tracing.participates_in_solar_ray_tracing
    :show-inheritance:

.. rubric:: Included in:

==================================================   ===================================================

Parent                                                                                           Summary

==================================================   ===================================================
:ref:`radiation <radiation_1>`                           Radiation settings for this boundary-condition.

:ref:`radiation <radiation_2>`                           Radiation settings for this boundary-condition.

:ref:`radiation <radiation_3>`                           Radiation settings for this boundary-condition.

:ref:`radiation <radiation_4>`                           Radiation settings for this boundary-condition.

:ref:`recirculation_inlet <recirculation_inlet>`                                     Help not available.

:ref:`recirculation_outlet <recirculation_outlet>`                                   Help not available.

:ref:`radiation <radiation_5>`                           Radiation settings for this boundary-condition.

==================================================   ===================================================

