version/0.27/_sources/api/solver/_autosummary/settings/participates_in_solar_ray_tracing.rst.txt
:orphan:

.. _participates_in_solar_ray_tracing:

participates_in_solar_ray_tracing
=================================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.participates_in_solar_ray_tracing
    :show-inheritance:

.. rubric:: Included in:

======================================================   ======================================================================

Parent                                                                                                                  Summary

======================================================   ======================================================================
:ref:`radiation_1 <radiation_1>`                                                Radiation settings for this boundary-condition.

:ref:`radiation_2 <radiation_2>`                                                Radiation settings for this boundary-condition.

:ref:`radiation_3 <radiation_3>`                                        Allows to change radiation model variables or settings.

:ref:`radiation_4 <radiation_4>`                                                Radiation settings for this boundary-condition.

:ref:`radiation_5 <radiation_5>`                                                Radiation settings for this boundary-condition.

:ref:`recirculation_inlet_1 <recirculation_inlet_1>`          Allows to change recirculation-inlet model variables or settings.

:ref:`recirculation_outlet_1 <recirculation_outlet_1>`       Allows to change recirculation-outlet model variables or settings.

:ref:`radiation_6 <radiation_6>`                                                Radiation settings for this boundary-condition.

======================================================   ======================================================================

